[tool.poetry]
name = "prcc-pytorch"
version = "0.1.0"
description = "PyTorch Implementation of PRCC Dataset"
authors = ["Shunta Komatsu <shuntak217@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.3"
pillow = "^7.1.2"
torch = "^1.5.0"
torchvision = "^0.6.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
isort = "^4.3.21"
mypy = "^0.770"
pytest = "^5.4.1"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
